--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
 <body>
     
 
-    <div class="container">
+    <div class="container" id="game">
         <div class="song" id="left-song">
-            <img id="left-img" src="Bones.webp">
-            <audio id="left-audio" src="bonk.mp3"></audio>
-            <h1 id="left-artist">Imagine Dragons</h1>
-            <h3 id="left-title">Bones</h3>
-            <button id="left-button">Vote!</button>
+            <img id="left-img" src="">
+            <audio id="left-audio" src=""></audio>
+            <h1 id="left-artist"></h1>
+            <h3 id="left-title"></h3>
+            <button id="left-vote">Vote!</button>
         </div>
         <div style="width: 30vh;"></div>
         <div class="song" id="right-song">
             <img id="right-img" src="">
             <audio id="right-audio" src=""></audio>
             <div class="text-div">
-                <h1 id="right-artist">Imagine Dragons</h1>
+                <h1 id="right-artist"></h1>
             </div>
             <div class="text-div">
-                <h3 id="right-title">Bones</h3>
+                <h3 id="right-title"></h3>
             </div>
-            <button id="right-button">Vote!</button>
+            <button id="right-vote">Vote!</button>
         </div>
+    </div>
+
+    <div id="game-over">
+        <h1>bBO0bo)Bo!"hh"</h1>
     </div>
 
 
