--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
             <h3 id="left-title"></h3>
             <button id="left-vote">Vote!</button>
         </div>
-        <div style="width: 30vh;"></div>
         <div class="song" id="right-song">
             <img id="right-img" src="">
             <audio id="right-audio" src=""></audio>
-            <div class="text-div">
-                <h1 id="right-artist"></h1>
-            </div>
-            <div class="text-div">
-                <h3 id="right-title"></h3>
-            </div>
+            <h1 id="right-artist"></h1>
+            <h3 id="right-title"></h3>
             <button id="right-vote">Vote!</button>
         </div>
     </div>
 
-    <div id="game-over">
-        <h1>bBO0bo)Bo!"hh"</h1>
+    <div class="container" id="game-over">
+        <div class="song" id="win-song">
+            <img id="win-img" src="">
+            <audio id="win-audio" src=""></audio>
+            <h1 id="win-artist"></h1>
+            <h3 id="win-title"></h3>
+        </div>
     </div>
 
 
